720 fullscreen button bug (#728)
* Fullscreen as functional component

* pass isFullscreen as prop to force rerender

* Fixed scrollbar bug

* Fix issue with map being null

--- a/src/components/app.scss
+++ b/src/components/app.scss
@@ -11,5 +11,6 @@
         display: flex;
         flex-direction: row;
         height: 100%;
+        overflow-y: auto;
     }
 }
